@@ -1,6 +1,7 @@
 user_clusters etc/postgresql-common
 debian/init.d-functions usr/share/postgresql-common
 debian/maintscripts-functions usr/share/postgresql-common
+debian/autovacuum.conf etc/postgresql-common
 PgCommon.pm usr/share/postgresql-common
 pg_wrapper usr/share/postgresql-common
 pg_lsclusters usr/bin
